--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HASSAN,s Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="website icon" type="png" href="l.jpg">
 </head>
 <body>
     <section class="first">
