--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <section class="first">
         <span class="con1">
-            <h1>HASSAN HAYAT <br> (Mern stack developer)</h1>
+            <h1>HASSAN HAYAT <br> <span id="element"></span></h1>
             <div class="btn">
-            <button><a href="https://wa.me/923395001230?text=Hello,%20I%20am%20interested%20in%20your%20services" target="_blank">Live chat</a></button>
+            <button><a href="https://wa.me/923363769268?text=Hello,%20I%20am%20interested%20in%20your%20services" target="_blank">Live chat</a></button>
             <button><a href="tel:+923395001230">Call now</a></button>
             </span>
         </div>
@@ -32,5 +32,13 @@
                 As a MERN stack developer, I can handle both front-end and back-end development, ensuring the websites I create are visually appealing and functionally robust. Whether you need a personal blog, an e-commerce platform, or a complex web application, I can help you create a website that meets your needs and exceeds your expectations. Thank you for considering me for your web development projects, and I look forward to the opportunity to work with you.</p>
             </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        var typed = new Typed('#element', {
+          strings: ['(Mern stack developer)', '(Javascript developer)'],
+          typeSpeed: 55,
+        //   loop:true
+        });
+      </script>
 </body>
 </html>
