--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HASSAN,s Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="website icon" type="png" href="l.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section class="first">
@@ -17,7 +18,7 @@
             </span>
         </div>
     </section>
-    <section class="sec">
+    <section class="sec">  
         <div class="con2">
             <h1>Personal Profile</h1>
             <br>
@@ -32,13 +33,31 @@
                 As a MERN stack developer, I can handle both front-end and back-end development, ensuring the websites I create are visually appealing and functionally robust. Whether you need a personal blog, an e-commerce platform, or a complex web application, I can help you create a website that meets your needs and exceeds your expectations. Thank you for considering me for your web development projects, and I look forward to the opportunity to work with you.</p>
             </div>
     </section>
+    <section class="sec3">
+        <div class="cont">
+            <h1>CONTECT US</h1>
+            <div class="an">
+            <a href="tel:+923395001230"><i class="fa fa-phone" style=" color: black;"> +923395001230</i></a>
+            <a href="mailto:aylskhsmvz.v@gmail.com" target="_blank"><i class="fa fa-envelope" style=" color: black;"> aylskhsmvz.v@gmail.com</i></a>
+            <a href="https://github.com/hasanhayat" target="_blank"><i class="fa fa-github" style=" color: black;"> https://github.com/hasanhayat</i></a>
+            <a href="#" target="_blank"><i class="fa fa-linkedin-square" style=" color: black;"> https://www.linkedin.com/in/hasanhayat</i></a>
+            <a href="#" target="_blank"><i class="fa fa-map-marker" style=" color: black;"> Metroville, S.I.T.E, Karachi, Block 1, B-217.</i></a>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script>
-        var typed = new Typed('#element', {
-          strings: ['(Mern stack developer)', '(Javascript developer)'],
-          typeSpeed: 55,
-        //   loop:true
-        });
-      </script>
+    <script src="script.js"></script>
 </body>
 </html>
